# subcult_algorythm

./: .gitignore  README.md  knight_moves.py  study-log.md
1012_배추/람쥐/: 1012.cpp  람쥐_풀이.md  배추 문제.md  유기농 배추.md
1012_배추/카렌/: 카렌_풀이.md
1043_거짓말/람쥐/: 1043 람쥐 풀이.md
1043_거짓말/시온/: 1043_시온_코드.py
1043_거짓말/카렌/: 1043_카렌_풀이.md
1043_거짓말/헤파리/: 헤파리.cpp
11286_절대값 힙/: 11286_카렌_코드.cpp  11286_카렌_풀이.md
11438_LCA2/카렌/: 백준 11438번 LCA 2 (C++).md
11438_LCA2/하야세/: LCA_2.cpp
11438_LCA2/헤파리/: Binary Lifting.cpp
1197_최소 스패팅 트리/람쥐/: 최소신장트리 - 풀이.md
1197_최소 스패팅 트리/우시오하야세/: solve.cpp
1197_최소 스패팅 트리/카렌/: 1197_카렌_코드.c
1197_최소 스패팅 트리/헤파리/: Kruskal.cpp  Prim.cpp
1463_1로 만들기/시온/: 시온_코드.py
1463_1로 만들기/우시오하야세/: main.cpp
1463_1로 만들기/카렌/: 카렌_1로만들기_코드.c
1463_1로 만들기/헤파리/: 헤파리_bfs.cpp  헤파리_dp.cpp  헤파리_코드.md
1644_소수의 연속합/카렌/: 카렌_1644_풀이.md
1655_가운데를 말해요/우시오하야세/: 가장빠른풀이.cpp
1655_가운데를 말해요/카렌/: 카렌_1655_정답코드.cpp  카렌_1655_풀이.md
1753_최단경로/우시오하야세/: 하야세.cc
1753_최단경로/카렌/: 1753_카렌_code.c  1753_카렌_풀이.md
1753_최단경로/헤파리/: 헤파리.cpp
1781_컵라면/헤파리/: 컵라면.cpp
1806_부분합/우시오하야세/: 부분합.cpp
1916_최소비용_구하기/우시오하야세/: README.md  최소비용구하기.cpp
1940_주몽/카렌/: 카렌_1940_풀이.md
1991_트리 순회/카렌/: 백준 1991번 트리 순회 (C++).md  카렌_1991_트리 순회_코드.cpp
2003_수들의 합 2/: 카렌_2003_코드.cpp
2075_N번째로 큰 수/: 2075_카렌_풀이.md
2167_2차원 배열의 합/헤파리/: 헤파리_코드.cpp
2252_줄 세우기/우시오하야세/: dfs.cpp
2252_줄 세우기/카렌/: 2252_카렌_코드.c
2252_줄 세우기/헤파리/: 헤파리.cpp
CS/: CMakeLists.txt
CS/제어문과삼항연산자/: CMakeLists.txt  README.md  test.cpp
명조퍼즐/: README.md  TestCase1.txt  TestCase2.txt  TestCase3.txt
명조퍼즐/헤파리/: 헤파리.cpp
인텐시브코테트레이닝/: ReadMe.md
(+135 files in other folders)
